qt/gen_qheaderview.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QHeaderView_override_virtual_commitData(void* self, intptr_t slot);
void QHeaderView_virtualbase_commitData(void* self, QWidget* editor);
bool QHeaderView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QHeaderView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QHeaderView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QHeaderView_virtualbase_selectedIndexes(const void* self);
bool QHeaderView_override_virtual_edit2(void* self, intptr_t slot);
bool QHeaderView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QHeaderView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QHeaderView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QHeaderView_override_virtual_startDrag(void* self, intptr_t slot);
void QHeaderView_virtualbase_startDrag(void* self, int supportedActions);
bool QHeaderView_override_virtual_viewOptions(void* self, intptr_t slot);
QStyleOptionViewItem* QHeaderView_virtualbase_viewOptions(const void* self);
bool QHeaderView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QHeaderView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QHeaderView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QHeaderView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QHeaderView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QHeaderView_override_virtual_dropEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QHeaderView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QHeaderView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QHeaderView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QHeaderView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QHeaderView_override_virtual_timerEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QHeaderView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QHeaderView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QHeaderView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QHeaderView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QHeaderView_virtualbase_viewportSizeHint(const void* self);
bool QHeaderView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QHeaderView_virtualbase_minimumSizeHint(const void* self);
bool QHeaderView_override_virtual_setupViewport(void* self, intptr_t slot);
void QHeaderView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QHeaderView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QHeaderView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QHeaderView_override_virtual_changeEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QHeaderView_override_virtual_devType(void* self, intptr_t slot);
int QHeaderView_virtualbase_devType(const void* self);
bool QHeaderView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QHeaderView_virtualbase_heightForWidth(const void* self, int param1);
bool QHeaderView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QHeaderView_virtualbase_hasHeightForWidth(const void* self);
bool QHeaderView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QHeaderView_virtualbase_paintEngine(const void* self);
bool QHeaderView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QHeaderView_override_virtual_enterEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_enterEvent(void* self, QEvent* event);
bool QHeaderView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QHeaderView_override_virtual_moveEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QHeaderView_override_virtual_closeEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QHeaderView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QHeaderView_override_virtual_actionEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QHeaderView_override_virtual_showEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QHeaderView_override_virtual_hideEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QHeaderView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QHeaderView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QHeaderView_override_virtual_metric(void* self, intptr_t slot);
int QHeaderView_virtualbase_metric(const void* self, int param1);
bool QHeaderView_override_virtual_initPainter(void* self, intptr_t slot);
void QHeaderView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QHeaderView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QHeaderView_virtualbase_redirected(const void* self, QPoint* offset);
bool QHeaderView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QHeaderView_virtualbase_sharedPainter(const void* self);
bool QHeaderView_override_virtual_childEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QHeaderView_override_virtual_customEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_customEvent(void* self, QEvent* event);
void QHeaderView_virtualbase_connectNotify(void* self, QMetaMethod* signal);