qt/gen_qheaderview.nim

proc fQHeaderView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QHeaderView_virtualbase_commitData".}
proc fcQHeaderView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_commitData".}
proc fQHeaderView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QHeaderView_virtualbase_editorDestroyed".}
proc fcQHeaderView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_editorDestroyed".}
proc fQHeaderView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QHeaderView_virtualbase_selectedIndexes".}
proc fcQHeaderView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_selectedIndexes".}
proc fQHeaderView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QHeaderView_virtualbase_edit2".}
proc fcQHeaderView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_edit2".}
proc fQHeaderView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QHeaderView_virtualbase_selectionCommand".}
proc fcQHeaderView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_selectionCommand".}
proc fQHeaderView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QHeaderView_virtualbase_startDrag".}
proc fcQHeaderView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_startDrag".}
proc fQHeaderView_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_viewOptions".}
proc fcQHeaderView_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_viewOptions".}
proc fQHeaderView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QHeaderView_virtualbase_focusNextPrevChild".}
proc fcQHeaderView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_focusNextPrevChild".}
proc fQHeaderView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_dragEnterEvent".}
proc fcQHeaderView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_dragEnterEvent".}
proc fQHeaderView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_dragMoveEvent".}
proc fcQHeaderView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_dragMoveEvent".}
proc fQHeaderView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_dragLeaveEvent".}
proc fcQHeaderView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_dragLeaveEvent".}
proc fQHeaderView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_dropEvent".}
proc fcQHeaderView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_dropEvent".}
proc fQHeaderView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_focusInEvent".}
proc fcQHeaderView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_focusInEvent".}
proc fQHeaderView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_focusOutEvent".}
proc fcQHeaderView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_focusOutEvent".}
proc fQHeaderView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_keyPressEvent".}
proc fcQHeaderView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_keyPressEvent".}
proc fQHeaderView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_resizeEvent".}
proc fcQHeaderView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_resizeEvent".}
proc fQHeaderView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_timerEvent".}
proc fcQHeaderView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_timerEvent".}
proc fQHeaderView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_inputMethodEvent".}
proc fcQHeaderView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_inputMethodEvent".}
proc fQHeaderView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QHeaderView_virtualbase_eventFilter".}
proc fcQHeaderView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_eventFilter".}
proc fQHeaderView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_viewportSizeHint".}
proc fcQHeaderView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_viewportSizeHint".}
proc fQHeaderView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_minimumSizeHint".}
proc fcQHeaderView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_minimumSizeHint".}
proc fQHeaderView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QHeaderView_virtualbase_setupViewport".}
proc fcQHeaderView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_setupViewport".}
proc fQHeaderView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QHeaderView_virtualbase_wheelEvent".}
proc fcQHeaderView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_wheelEvent".}
proc fQHeaderView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QHeaderView_virtualbase_contextMenuEvent".}
proc fcQHeaderView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_contextMenuEvent".}
proc fQHeaderView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QHeaderView_virtualbase_changeEvent".}
proc fcQHeaderView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_changeEvent".}
proc fQHeaderView_virtualbase_devType(self: pointer, ): cint{.importc: "QHeaderView_virtualbase_devType".}
proc fcQHeaderView_override_virtual_devType(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_devType".}
proc fQHeaderView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QHeaderView_virtualbase_heightForWidth".}
proc fcQHeaderView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_heightForWidth".}
proc fQHeaderView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QHeaderView_virtualbase_hasHeightForWidth".}
proc fcQHeaderView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_hasHeightForWidth".}
proc fQHeaderView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_paintEngine".}
proc fcQHeaderView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_paintEngine".}
proc fQHeaderView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_keyReleaseEvent".}
proc fcQHeaderView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_keyReleaseEvent".}
proc fQHeaderView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_enterEvent".}
proc fcQHeaderView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_enterEvent".}
proc fQHeaderView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_leaveEvent".}
proc fcQHeaderView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_leaveEvent".}
proc fQHeaderView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_moveEvent".}
proc fcQHeaderView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_moveEvent".}
proc fQHeaderView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_closeEvent".}
proc fcQHeaderView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_closeEvent".}
proc fQHeaderView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_tabletEvent".}
proc fcQHeaderView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_tabletEvent".}
proc fQHeaderView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_actionEvent".}
proc fcQHeaderView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_actionEvent".}
proc fQHeaderView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_showEvent".}
proc fcQHeaderView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_showEvent".}
proc fQHeaderView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_hideEvent".}
proc fcQHeaderView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_hideEvent".}
proc fQHeaderView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QHeaderView_virtualbase_nativeEvent".}
proc fcQHeaderView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_nativeEvent".}
proc fQHeaderView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QHeaderView_virtualbase_metric".}
proc fcQHeaderView_override_virtual_metric(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_metric".}
proc fQHeaderView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QHeaderView_virtualbase_initPainter".}
proc fcQHeaderView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_initPainter".}
proc fQHeaderView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QHeaderView_virtualbase_redirected".}
proc fcQHeaderView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_redirected".}
proc fQHeaderView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_sharedPainter".}
proc fcQHeaderView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_sharedPainter".}
proc fQHeaderView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_childEvent".}
proc fcQHeaderView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_childEvent".}
proc fQHeaderView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QHeaderView_virtualbase_customEvent".}
proc fcQHeaderView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_customEvent".}
proc fQHeaderView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QHeaderView_virtualbase_connectNotify".}
